:sparkles: :lipstick: Fix overflow and margin

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   color: #eee;
   font: 16px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  margin: 0;
+  padding: 0;
 }
 
 button {
